Fix: URLs de API y CORS configurables por variable de entorno para producción